--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "bin": {
+    "bgs": "dist/bin/brain-games.js"
+  }
   "repository": {
     "type": "git",
     "url": "git+https://github.com/svezr/backend-project-lvl1.git"
@@ -21,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/svezr/backend-project-lvl1/issues"
   },
-  "homepage": "https://github.com/svezr/backend-project-lvl1#readme"
+  "homepage": "https://github.com/svezr/backend-project-lvl1#readme",
+  "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/node": "^7.8.3",
+    "@babel/preset-env": "^7.8.3"
+  }
 }
