--- a/package.json
+++ b/package.json
@@ -1,14 +1,20 @@
 {
-  "name": "bgs",
+  "name": "brain-games",
   "version": "1.0.0",
   "description": "Brain games study project from hexlet.io course.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "NODE_ENV=production babel src --out-dir dist --source-map inline",
+    "prepublishOnly": "npm run build",
+    "publish": "npm publish --dry-run"
   },
   "bin": {
-    "bgs": "dist/bin/brain-games.js"
-  }
+    "brain-games": "dist/bin/brain-games.js"
+  },
+  "files": [
+    "dist"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/svezr/backend-project-lvl1.git"
