--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
     "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3"
+    "@babel/preset-env": "^7.8.3",
+    "readline-sync": "^1.4.10"
   }
 }
