fixed eslintrc, linter errors
также изменен на экспорт по-умолчанию (ругался линтер)

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,15 +1,15 @@
-# plugins:
-  # - jest
-  # - babel
+#plugins:
+  #- jest
+  #- babel
 env:
   node: true
-  jest: true
+  #jest: true
 
-# parser: babel-eslint
+#parser: babel-eslint
 
 extends:
   - 'airbnb-base'  
-  # - 'plugin:jest/recommended'
+  #- 'plugin:jest/recommended'
 
 rules:
   no-console: 0
