--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "url": "https://github.com/svezr/backend-project-lvl1/issues"
   },
   "homepage": "https://github.com/svezr/backend-project-lvl1#readme",
+  "dependencies": {    
+    "readline-sync": "^1.4.10"
+  },
   "devDependencies": {
     "@babel/cli": "^7.8.3",
     "@babel/core": "^7.8.3",
