--- a/.github/workflows/nodejs3.yml
+++ b/.github/workflows/nodejs3.yml
@@ -20,5 +20,5 @@ jobs:
     - run: make lint
     #- run: npm run build --if-present
     #- run: npm test
-      #env:
-        #CI: true
+      env:
+        CI: true
