--- a/.github/workflows/nodejs3.yml
+++ b/.github/workflows/nodejs3.yml
@@ -15,8 +15,10 @@ jobs:
     - uses: actions/checkout@v2
     - name: import plugin
     - run: npm install eslint-plugin-import    
+    - uses: actions/checkout@v2      
     - name: Install airbnb syntax
     - run: npm install eslint-config-airbnb-base
+    - uses: actions/checkout@v2      
     - name: ESLint test      
     - run: make lint
       #uses: actions/setup-node@v1
