--- a/.github/workflows/nodejs3.yml
+++ b/.github/workflows/nodejs3.yml
@@ -11,13 +11,10 @@ jobs:
         #node-version: [8.x, 10.x, 12.x]
 
     steps:
-
-    - uses: actions/checkout@v2
     - name: install deps
-    - run: npm install
-    - uses: actions/checkout@v2            
-    - name: ESLint test      
-    - run: make lint
+      run: npm install
+    - name: run lint
+      run: make lint
       #uses: actions/setup-node@v1
       #with:
         #node-version: ${{ matrix.node-version }}
