--- a/.github/workflows/nodejs4.yml
+++ b/.github/workflows/nodejs4.yml
@@ -1,4 +1,4 @@
-name: Node.js CI
+name: make lint cmd
 
 on: [push]
 
@@ -18,8 +18,6 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    #- run: npm run build --if-present
-    #- run: npm test
       env:
         CI: true
     - run: make lint
