--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "brain-games",
   "version": "1.0.0",
   "description": "Brain games study project from hexlet.io course.",
-  "main": "index.js",
+  "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
@@ -10,7 +11,7 @@
     "publish": "npm publish --dry-run"
   },
   "bin": {
-    "brain-games": "dist/bin/brain-games.js"
+    "brain-games": "bin/brain-games.js"
   },
   "files": [
     "dist"
@@ -31,7 +32,7 @@
     "url": "https://github.com/svezr/backend-project-lvl1/issues"
   },
   "homepage": "https://github.com/svezr/backend-project-lvl1#readme",
-  "dependencies": {    
+  "dependencies": {
     "readline-sync": "^1.4.10"
   },
   "devDependencies": {
