--- a/package.json
+++ b/package.json
@@ -35,7 +35,9 @@
   },
   "homepage": "https://github.com/svezr/backend-project-lvl1#readme",
   "dependencies": {
-    "readline-sync": "^1.4.10",
+    "readline-sync": "^1.4.10"
+  },
+  "devDependencies": {
     "eslint": "^6.8.0",
     "eslint-config-airbnb-base": "^14.0.0",
     "eslint-plugin-import": "^2.20.0"
